--- a/template/index.html
+++ b/template/index.html
@@ -27,6 +27,13 @@
             <li><a href="index.html" class="current">Home</a></li>
             <li><a href="about.html">About</a></li>
         </ul>
+        <a href="{{ url_for('add_article_page') }}" class="btn btn-primary" style="margin-left: 10px;">
+            הוסף כתבה
+        </a>
+
+        <a href="{{ url_for('add_category_page') }}" class="btn btn-secondary">הוספת קטגוריה</a>
+
+
     </div>
 </nav>
 
@@ -189,11 +196,12 @@
         <div>
             <h2>Join our Club</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, provident.</p>
-            <a href="#" class="btn btn-secondary">Join Now</a>
+            <a href="{{ url_for('login') }}" class="btn btn-secondary">Join Now</a>
         </div>
+
         <div>
             <p>
-                Copyright NewsGrid &copy; 2019, All Rights reserved.
+                Copyright NewsGrid &copy; 2025, All Rights reserved.
             </p>
         </div>
     </div>
